--- a/src/Components/Home/index.css
+++ b/src/Components/Home/index.css
@@ -12,7 +12,7 @@
 }
 
 .card {
-    width:300px; /* Adjust width as needed */
+    width:300px; 
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -41,7 +41,7 @@
     border: 1px solid #ccc;
     padding: 15px;
     margin: 20px;
-    border-radius: 5px; /* Optional: Add rounded corners */
+    border-radius: 5px; 
     width: 350px;
     height:150px;
     background-color: #ccc;
@@ -84,7 +84,7 @@
   .footer-content {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    flex-wrap: wrap; 
   }
   
   .footer-section {
@@ -113,7 +113,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    flex-wrap: wrap; 
   }
   
   .contact-info span {
@@ -137,12 +137,12 @@
   /* Media queries for responsiveness */
   @media (max-width: 768px) {
     .footer-content {
-      flex-direction: column; /* Stack sections vertically */
+      flex-direction: column; 
     }
   
     .footer-bottom {
-      flex-direction: column; /* Stack bottom elements vertically */
-      align-items: flex-start; /* Align items to the left */
+      flex-direction: column; 
+      align-items: flex-start; 
     }
   
     .contact-info, .social-media, .copyright {
