--- a/src/Components/Products/index.css
+++ b/src/Components/Products/index.css
@@ -69,3 +69,16 @@
     margin: 10px 0;
 
   }
+  @media screen and (max-width:768px){
+    .product-card{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .products-container{
+      margin:10px 10px;
+      padding:5px;
+  }
+
+  }
